let hpcc start if /etc/HPCCSystems/environment.xml is available. This will allow scaled hpcc node start automatically

--- a/dali-rc.yaml
+++ b/dali-rc.yaml
@@ -21,6 +21,8 @@ spec:
           volumeMounts:
             - mountPath: /etc/HPCCSystems
               name: config
+          command:
+            - /tmp/start_hpcc.sh
       volumes:
         - name: config
           persistentVolumeClaim:
