Add multiple roxie shared volumes and load balancer. Add an option of individual volume for roxie Add env for setup of kubernetes and HPCC environment

--- a/hpcc-ansible-template.yaml
+++ b/hpcc-ansible-template.yaml
@@ -20,6 +20,9 @@ spec:  # specification of the pod’s contents
           name: config-esp
       stdin: true
       tty: true
+      env:
+        - name: NUM_ROXIE_LB
+          value: "<NUM_ROXIE_LB>"
   volumes:
     - name: config-default
       persistentVolumeClaim:
