--- a/roxie-data-pvc-template.yaml
+++ b/roxie-data-pvc-template.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: data
+  name: roxie-data-<INDEX>
 spec:
   accessModes:
     - ReadWriteMany
   resources:
     requests:
-      storage: 10Gi
+      storage: <ROXIE_VOLUME_SIZE>Gi
