--- a/roxie-rc-template.yaml
+++ b/roxie-rc-template.yaml
@@ -1,32 +1,33 @@
 apiVersion: v1
 kind: ReplicationController
 metadata:
-  name: roxie-rc
+  name: roxie-rc<INDEX>
 spec:
-  replicas: 2
+  replicas: 1
   selector:
-    app: roxie
+    app: roxie<INDEX>
   template:
     metadata:
       labels:
-        app: roxie
+        app: roxie<INDEX>
     spec:
       containers:
-        - name: roxie
-          image: hpccsystems/platform-ce:latest
+        - name: roxie<INDEX>
+          image: "hpccsystems/platform-ce:latest"
           securityContext:
             privileged: true
           volumeMounts:
             - mountPath: /etc/HPCCSystems
               name: config
-            - mountPath: /var/lib/HPCCSystems/hpcc-data
-              name: data
+            - mountPath: /var/lib/HPCCSystems
+              name: libdata
           command:
             - /tmp/start_hpcc.sh
       volumes:
         - name: config
           persistentVolumeClaim:
             claimName: config-roxie
-        - name: data
-          persistentVolumeClaim:
-            claimName: data
+        - name: libdata
+          awsElasticBlockStore:
+            volumeID: <VOLUME_ID>
+            fsType: ext4
