Replace nfs server with nfs v3 on Ubuntu Trusty This fixed the problem of only first shared drive can be mounted by nfs Also add label to PV to let PVC easy identify similar PV

--- a/config-roxie-pv-template.yaml
+++ b/config-roxie-pv-template.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: config-roxie
+  labels:
+    config-type: roxie
 spec:
   capacity:
     storage: 1Gi
