--- a/config-default-pv-template.yaml
+++ b/config-default-pv-template.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: config-default
+  labels:
+    config-type: default
 spec:
   capacity:
     storage: 1Gi
