--- a/config-esp-pv-template.yaml
+++ b/config-esp-pv-template.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: config-esp
+  labels:
+    config-type: esp 
 spec:
   capacity:
     storage: 1Gi
