Add port for roxie and esp services

--- a/esp-service.yaml
+++ b/esp-service.yaml
@@ -10,6 +10,10 @@ spec:
       protocol: TCP
       port: 8010
       targetPort: 8010
+    - name: wsecl
+      protocol: TCP
+      port: 8002
+      targetPort: 8002
   selector: 
     app: esp
   type: LoadBalancer
