Create different environment.xml for each roxie LB Update env and HPCC configuration shares

--- a/roxie-rc-template.yaml
+++ b/roxie-rc-template.yaml
@@ -26,7 +26,7 @@ spec:
       volumes:
         - name: config
           persistentVolumeClaim:
-            claimName: config-roxie
+            claimName: config-default
         - name: libdata
           awsElasticBlockStore:
             volumeID: <VOLUME_ID>
