--- a/config-default-pv-template.yaml
+++ b/config-default-pv-template.yaml
@@ -12,4 +12,5 @@ spec:
   nfs:
     # FIXME: use the right IP
     server: <NFS_SERVICE_IP>
-    path: /hpcc-config/default
+    #path: /hpcc-config/default
+    path: /hpcc-config
