--- a/config-roxie-pv-template.yaml
+++ b/config-roxie-pv-template.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: config-roxie
+  name: config-roxie-<INDEX>
   labels:
-    config-type: roxie
+    config-type: roxie<INDEX>
 spec:
   capacity:
     storage: 1Gi
@@ -12,4 +12,4 @@ spec:
   nfs:
     # FIXME: use the right IP
     server: <NFS_SERVICE_IP>
-    path: /hpcc-config/roxie
+    path: /hpcc-config/roxie/<INDEX>
