--- a/config-roxie-pvc-template.yaml
+++ b/config-roxie-pvc-template.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: config-roxie
+  name: config-roxie-<INDEX>
 spec:
   accessModes:
     - ReadWriteMany
@@ -10,4 +10,4 @@ spec:
       storage: 1Gi
   selector:
     matchLabels:
-      config-type: roxie
+      config-type: roxie<INDEX>
